--- a/site.html
+++ b/site.html
@@ -22,6 +22,7 @@
             </ul>
         </div>
     </div>
+    <!--
     <div id="overlaypizza50"></div>
     <div id="pizza50popup">
       <div class="scrispopup">
@@ -30,9 +31,10 @@
       </div>
       <img src="poze/pizza50popup.jpg">
     </div>
+    -->
     <div id="welcome">
       <ul>
-        <h2>Bine ati venit la Papa Man</h2>
+        <h5>Bine ati venit la Papa Man</h5>
         <h6>Better Pizza Fresh Ingredients</h6>
       </ul>
     </div>
@@ -41,11 +43,14 @@
     <div class="popup" id="popup">
       <img src="poze/program.jpg">
       <div class="popupdreapta" id="popupdreapta">
-        <h2>Contactează-ne</h2>
+        <h2>Contactează-ne <img src="poze/telefonpoza.png"></h2>
         <numar1>07777777</numar1>
         <zone1>Pentru zonele:<br>Bragadiru, Clinceni, Domnești, Măgurele</zone1>
         <numar2>07888888</numar2> 
         <zone2>Pentru zonele:<br>Cornetu, Buda, Mihăilești, Popești</zone2>
+      </div>
+      <div class="pozadelivery" id="pozadelivery">
+        <img src="poze/delivery.jpg">
       </div>
     </div>
 
