--- a/site2.html
+++ b/site2.html
@@ -33,7 +33,7 @@
     </div>
     <div class="Pizza">
       <div class="pizza-item">
-        <h3>Mexicana 32cm</h3>
+        <h3>Mexicană 32cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
         <pr>Pret:</pr>
@@ -63,7 +63,7 @@
         <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Vegetariana 32cm</h3>
+        <h3>Vegetariană 32cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
         <pr>Pret:</pr>
@@ -75,7 +75,7 @@
         <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Rustica 32cm</h3>
+        <h3>Rustică 32cm</h3>
         <img src="poze/pizza rustica.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
         <pr>Pret:</pr>
@@ -87,7 +87,7 @@
         <pr>Pret:</pr>
       </div>
       <div class="pizza-item">
-        <h3>Taraneasca 32cm</h3>
+        <h3>Țărănească 32cm</h3>
         <img src="poze/Pizza taraneasca.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
         <pr>Pret:</pr>
@@ -146,13 +146,13 @@
     <div id="pizza50"></div>
     <div class="pizza50 hidden">
       <div class="pizza50-item">
-        <h3>Mexicana 50cm</h3>
+        <h3>Mexicană 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Man</h3>
+        <h3>Man 50cm</h3>
         <img src="poze/Pizza man.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
         <pr>Pret:</pr>
@@ -164,91 +164,91 @@
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Capriciosa</h3>
+        <h3>Capriciosa 50cm</h3>
         <img src="poze/Pizza Capriciosa.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Carnivora</h3>
+        <h3>Carnivora 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Vegetariana</h3>
+        <h3>Vegetariană 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Pepperoni</h3>
+        <h3>Pepperoni 50cm</h3>
         <img src="poze/Pizza pepperoni.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Rustica</h3>
+        <h3>Rustică 50cm</h3>
         <img src="poze/pizza rustica.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Quattro Stagioni</h3>
+        <h3>Quattro Stagioni 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Taraneasca</h3>
+        <h3>Țărănească 50cm</h3>
         <img src="poze/Pizza taraneasca.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>King</h3>
+        <h3>King 50cm</h3>
         <img src="poze/Pizza king.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Pui</h3>
+        <h3>Pui 50cm</h3>
         <img src="poze/Pizza pui.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Pui Picant</h3>
+        <h3>Pui Picant 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Beef</h3>
+        <h3>Beef 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Diavola</h3>
+        <h3>Diavola 50cm</h3>
         <img src="poze/pizza diavola.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Carbonara</h3>
+        <h3>Carbonara 50cm</h3>
         <img src="poze/Logo.jpg">
         <p>Ingrediente: sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Pizza Ton</h3>
+        <h3>Pizza Ton 50cm</h3>
         <img src="poze/Pizza ton.jpg">
         <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
-        <h3>Pizza Caltzone</h3>
+        <h3>Pizza Caltzone 50cm</h3>
         <img src="poze/Pizza caltzone.jpg">
         <p>Ingrediente:</p>
         <pr>Pret:</pr>
@@ -435,11 +435,14 @@
   <div class="popup" id="popup">
     <img src="poze/program.jpg">
     <div class="popupdreapta" id="popupdreapta">
-      <h2>Contactează-ne</h2>
+      <h2>Contactează-ne <img src="poze/telefonpoza.png"></h2>
       <numar1>07777777</numar1>
       <zone1>Pentru zonele:<br>Bragadiru, Clinceni, Domnești, Măgurele</zone1>
       <numar2>07888888</numar2> 
       <zone2>Pentru zonele:<br>Cornetu, Buda, Mihăilești, Popești</zone2>
+    </div>
+    <div class="pozadelivery" id="pozadelivery">
+      <img src="poze/delivery.jpg">
     </div>
   </div>
 
