Pregatire noul meniu

--- a/site2.html
+++ b/site2.html
@@ -11,20 +11,24 @@
 </head>
 
 <body>
-   <div class="banner">
-    <div class="navbar" id="navbar">
-      <ul>
-        <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
-        <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
-        <li><a href="#" id="contact-link">Contact</a></li>
-      </ul>
-
+  <div class="banner">
+    <div class="navbar">
+      <div class="menu-toggle">
+        <div class="hamburger"></div>
+      </div>
+        <ul class="menu">
+          <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#shaorma"id ="Shaorma">Shaorma</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
+          <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
+          <li><a href="#" id="contact-link">Contact</a></li>  
+        </ul>
     </div>
+</div>
     <!--Pentru Pizza-->
     <div id="pizza">Pizza</div>
     <div class="buton-container">
@@ -35,111 +39,131 @@
       <div class="pizza-item">
         <h3>Mexicană 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
+        <pr>32 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Man 32cm</h3>
         <img src="poze/Pizza man.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
+        <pr>29 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Quattro Formaggi 32cm</h3>
         <img src="poze/Pizza QF.jpg">
-        <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
-        <pr>Pret:</pr>
+        <p>Sos alb, mozzarella, gorgonzola, parmezan</p>
+        <pr>28 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Capriciosa 32cm</h3>
         <img src="poze/Pizza Capriciosa.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
+        <pr>26 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Carnivora 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
+        <pr>30 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Vegetariană 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
+        <pr>27 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Pepperoni 32cm</h3>
         <img src="poze/Pizza pepperoni.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, pepperoni, oregano</p>
+        <pr>30 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Rustică 32cm</h3>
         <img src="poze/pizza rustica.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei gras</p>
+        <pr>29 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Quattro Stagioni 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
+        <pr>28 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Țărănească 32cm</h3>
         <img src="poze/Pizza taraneasca.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
+        <pr>31 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>King 32cm</h3>
         <img src="poze/Pizza king.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
+        <pr>31 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Pui 32cm</h3>
         <img src="poze/Pizza pui.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, ciuperci, pui, rosii</p>
+        <pr>29 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Pui Picant 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, pui, rosii, jalapenos, sweet chilli</p>
+        <pr>29 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Beef 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, vita, ceapa, ardei gras, masline </p>
+        <pr>30 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Diavola 32cm</h3>
         <img src="poze/pizza diavola.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
+        <pr>28 Lei</pr>
       </div>
       <div class="pizza-item">
         <h3>Carbonara 32cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
-        <pr>Pret:</pr>
+        <p>Sos alb, ceapa, bacon, oregano, parmezan</p>
+        <pr>27 Lei</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pizza Ton 32cm</h3>
+        <h3>Ton 32cm</h3>
         <img src="poze/Pizza ton.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
+        <pr>30 Lei</pr>
       </div>
       <div class="pizza-item">
-        <h3>Pizza Caltzone</h3>
+        <h3>Pizza Calzzone</h3>
         <img src="poze/Pizza caltzone.jpg">
-        <p>Ingrediente:</p>
-        <pr>Pret:</pr>
+        <p>Sos de roșii, sunca, ciuperci, masline, parmezan</p>
+        <pr>25 Lei</pr>
       </div>
+      <div class="pizza-item">
+        <h3>Salami</h3>
+        <img src="poze/Logo.jpg">
+        <p>Sos de roșii, mozzarella, salam, oregano</p>
+        <pr>28 Lei</pr>
+      </div>
+      <div class="pizza-item">
+        <h3>BBQ</h3>
+        <img src="poze/Logo.jpg">
+        <p>Sos BBQ, mozzarella, pui, carnati, ceapa, ardei gras</p>
+        <pr>26 Lei</pr>
+      </div>
+      <div class="pizza-item">
+        <h3>Prosciutto Fungi</h3>
+        <img src="poze/Logo.jpg">
+        <p>Sos de roșii, sunca, ciuperci </p>
+        <pr>26 Lei</pr>
+      </div>
+        
+      
     </div>
 
     <!--Pentru Pizza Mare-->
@@ -148,103 +172,103 @@
       <div class="pizza50-item">
         <h3>Mexicană 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
+        <p>Sos de roșii, mozzarella, vita,pepperoni, ceapă, porumb, jalapenos</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Man 50cm</h3>
         <img src="poze/Pizza man.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
+        <p>Sos de roșii, mozzarella, chorizo, șuncă, ciuperci, masline, parmezan</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Quattro Formaggi 50cm</h3>
         <img src="poze/Pizza QF.jpg">
-        <p>Ingrediente: sos alb, mozzarella, gorgonzola, parmezan</p>
+        <p>Sos alb, mozzarella, gorgonzola, parmezan</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Capriciosa 50cm</h3>
         <img src="poze/Pizza Capriciosa.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
+        <p>Sos de roșii, mozzarella, sunca, ciuperci, măsline</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Carnivora 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
+        <p>Sos de roșii, mozzarella, salam, sunca, bacon, carnati</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Vegetariană 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
+        <p>Sos de roșii, mozzarella, ardei gras, ciuperci, porumb, ceapă</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Pepperoni 50cm</h3>
         <img src="poze/Pizza pepperoni.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, pepperoni, oregano</p>
+        <p>Sos de roșii, mozzarella, pepperoni, oregano</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Rustică 50cm</h3>
         <img src="poze/pizza rustica.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
+        <p>Sos de roșii, mozzarella, salam sasesc, carnati, masline, ardei</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Quattro Stagioni 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
+        <p>Sos de roșii, mozzarella, salam, sunca, ciuperci, masline</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Țărănească 50cm</h3>
         <img src="poze/Pizza taraneasca.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
+        <p>Sos de roșii, mozzarella, bacon, carnati, ceapă, ardei gras, porumb</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>King 50cm</h3>
         <img src="poze/Pizza king.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
+        <p>Sos de roșii, mozzarella, gorgonzola, chorizo, bacon, masline, parmezan</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Pui 50cm</h3>
         <img src="poze/Pizza pui.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ciuperci, pui, rosii</p>
+        <p>Sos de roșii, mozzarella, ciuperci, pui, rosii</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Pui Picant 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <p>Sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Beef 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <p>Sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Diavola 50cm</h3>
         <img src="poze/pizza diavola.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
+        <p>Sos de roșii, mozzarella, peperoncino, pepperoni, ceapa, jalapenos</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Carbonara 50cm</h3>
         <img src="poze/Logo.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella</p>
+        <p>Sos de roșii, mozzarella</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
         <h3>Pizza Ton 50cm</h3>
         <img src="poze/Pizza ton.jpg">
-        <p>Ingrediente: sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
+        <p>Sos de roșii, mozzarella, ton, masline, porumb, ceapa</p>
         <pr>Pret:</pr>
       </div>
       <div class="pizza50-item">
@@ -328,6 +352,56 @@
         <h3>Meniu Burger </h3>
         <img src="">
         <p>Ingrediente</p>
+      </div>
+    </div>
+
+    <!--Pentru Shaorma-->
+    <div id="shaorma">Shaorma</div>
+    <div class="Shaorma">
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
+      </div>
+      <div class="shaorma-item">
+        <h3>Shaorma</h3>
+        <img src="poze/Logo.jpg">
+        <p>Ingrediente:</p>
       </div>
     </div>
 
@@ -415,8 +489,7 @@
             meteorologice, traficul rutier si de alte probleme tehnice si umane ce nu tin de Papa Man.</p>
           </div>
           <div class="col-md-6 email si facebook">
-            <p>Email: alinfirica11@yahoo.com</p>
-            <p><a href="https://www.facebook.com/pizzamancornetu">Facebook</a></p>
+            <p10><a href="https://www.facebook.com/pizzamancornetu"><img src="poze/iconita facebook.jpg" alt="Facebook"></a></p10>
           </div>
           <div class="col-md-6">
             <ul>
