--- a/site.html
+++ b/site.html
@@ -10,11 +10,15 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <ul>
+          <div class="menu-toggle">
+            <div class="hamburger"></div>
+          </div>
+            <ul class="menu">
               <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#shaorma"id ="Shaorma">Shaorma</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
               <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
@@ -22,6 +26,24 @@
             </ul>
         </div>
     </div>
+  <!--Carousel slides-->
+  <div class="slider-container">
+    <div class="slider">
+      <div class="slider-slide">
+        <img src="poze/SuperMan.jpg" alt="SuperMan">
+      </div>
+      <div class="slider-slide">
+        <img src="poze/oferta.jpg" alt="Oferta 3+1">
+      </div>
+      <!--
+      <div class="slider-slide">
+        <img src="poze/lucruri.jpg" alt="Produse">
+      </div>
+    -->
+    </div>
+  </div>
+
+
     <!--
     <div id="overlaypizza50"></div>
     <div id="pizza50popup">
