--- a/site.html
+++ b/site.html
@@ -15,13 +15,8 @@
           </div>
             <ul class="menu">
               <li><a href="http://127.0.0.1:5500/site.html">Acasa</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Pizza</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#paste"id ="Paste">Paste</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#burgeri"id ="Burgeri">Burgeri</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#shaorma"id ="Shaorma">Shaorma</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#salate"id= "Salate">Salate</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#deserturi" id="Deserturi">Deserturi</a></li>
-              <li><a href="http://127.0.0.1:5500/site2.html#bauturi" id="Bauturi">Bauturi</a></li>
+              <li><a href="http://127.0.0.1:5500/site2.html#pizza" id="Pizza">Meniu</a></li>
+             
               <li><a href="#" id="contact-link">Contact</a></li>  
             </ul>
         </div>
@@ -34,6 +29,9 @@
       </div>
       <div class="slider-slide">
         <img src="poze/oferta.jpg" alt="Oferta 3+1">
+      </div>
+      <div class="slider-slide">
+        <img src="poze/Shaorma.jpg" alt="Shaorma">
       </div>
       <!--
       <div class="slider-slide">
@@ -63,24 +61,14 @@
 
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
-      <img src="poze/program.jpg">
-      <div class="popupdreapta" id="popupdreapta">
-        <h2>Contactează-ne <img src="poze/telefonpoza.png"></h2>
-        <numar1>07777777</numar1>
-        <zone1>Pentru zonele:<br>Bragadiru, Clinceni, Domnești, Măgurele</zone1>
-        <numar2>07888888</numar2> 
-        <zone2>Pentru zonele:<br>Cornetu, Buda, Mihăilești, Popești</zone2>
-      </div>
-      <div class="pozadelivery" id="pozadelivery">
-        <img src="poze/delivery.jpg">
-      </div>
+      <img src="poze/contacteaza-ne-final.png">
     </div>
 
     <section id="mijloc">
       <h8>Cu ce va servim?</h8>
       <p>Livrare GRATUITA <img src="poze/masina.png"></p>
       <button id="locatie" onclick="harta()">Locatie</button>
-      <button id="meniu"><a href="https://smallpdf.com/file#s=a65c75dd-7b49-4ad5-a239-50787fb68a20">Meniu PDF</a></button>
+      <button id="meniu"><a href="https://smallpdf.com/file#s=913da7c3-5593-41ab-9037-69b48eb1d052">Meniu PDF</a></button>
       <galerie class="poze">
         <img src="poze/pizza.jpg" alt="Imagine1">
         <img src="poze/multe pizza.jpg" alt="Imagine2">
